teacher and pt side developemtn done